--- a/app/views/grams/index.html.erb
+++ b/app/views/grams/index.html.erb
@@ -2,7 +2,7 @@
   <% @grams.each do |gram| %>
   <div class="card">
     <div class="handle"><%= gram.user.email %></div>
-    <%= image_tag gram.picture.url %>
+    <%= image_tag gram.picture.url, class: 'img-fluid' %>
     <p>
       <%= gram.message %>
     </p>
