Fixed styling errors

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -96,6 +96,12 @@ input {
   padding: 20px;
 }
 
+.comment-handle {
+  color: #125688;
+  font-weight: bold;
+  font-size: 18px;
+}
+
 .comment {
   font-size: 16px;
   margin-top: 5px;
