Fixed formatting issues

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -75,12 +75,12 @@ input {
   margin-top: 10px;
 }
 
-.input.boolean {
-  margin-left: 18px;
+.boolean {
+  margin-left: 4px;
   margin-top: 5px;
 }
 
-.input.boolean label {
+.boolean-label {
   margin-top: 5px;
   line-height: 44px;
 }
