Adjust CSS for images

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -37,8 +37,7 @@ body {
   border-radius: .25rem;
   box-shadow: 0 1px 0 rbga(0, 0, 0, 0.25);
   border: 1px solid #e8e8e8;
-  margin-top: 40px;
-  padding: 0;
+  padding: 10px;
 }
 
 .handle {
@@ -114,10 +113,10 @@ input {
 }
 
 .img-fluid {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   padding-top: 15px;
   padding-bottom: 15px;
-  transform: rotate(90deg);
-  width:  727px;
-  height: 727px;
   background-size: cover
 }
