--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -2,16 +2,16 @@
 @import url('https://fonts.googleapis.com/css?family=Pacifico&display=swap');
 
 body {
-  background-color: #b3b3b3;
+  background-color: #c9d7e8;
   font-family: 'Josefin Sans', sans-serif;
 }
 
 .top-nav {
-  background-color: white;
-  border-bottom-color: #edeeee;
+  background: image-url('prism.png');
+  border-bottom-color: #1e3048;
   border-bottom-width: 1px;
   border-bottom-style: solid;
-  height: 70px;
+  height: 80px;
   padding-top: 15px;
 }
 
@@ -23,9 +23,9 @@ body {
 
 .top-nav .add a {
   font-weight: bold;
-  color: #125688;
-  font-size: 16px;
-  padding-left: 8px;
+  color: #007bff;
+  font-size: 20px;
+  padding-left: 9px;
 }
 
 .top-nav .add {
@@ -33,22 +33,22 @@ body {
 }
 
 .card {
-  background-color: #fff;
-  border-radius: .25rem;
+  background: image_url('polaroid.png');
+  border-radius: .35rem;
   box-shadow: 0 1px 0 rbga(0, 0, 0, 0.25);
-  border: 1px solid #e8e8e8;
-  padding: 10px;
+  border: 2px solid #e8e8e8;
+  padding: 15px;
 }
 
 .handle {
   margin: 10px;
-  color: #125688;
+  color: #1773b5;
   font-weight: bold;
   font-size: 18px;
 }
 
 .card p, .card .message {
-  font-size: 18px;
+  font-size: 20px;
   margin: 20px;
 }
 
