--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -30,6 +30,7 @@ body {
 
 .top-nav .add {
   margin-top: 10px;
+  color: #e6f2ff;
 }
 
 .card {
@@ -72,6 +73,7 @@ input {
   font-size: 24px;
   color: white;
   margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 .boolean {
@@ -82,6 +84,13 @@ input {
 .boolean-label {
   margin-top: 5px;
   line-height: 44px;
+}
+
+
+.form-check-input {
+    position: static;
+    margin-top: 0.3rem;
+    margin-left: -1.25rem;
 }
 
 .gram-actions a {
